	do test that x11() works in a new Unix-alike R installation.

    o	The tables for plotmath, Hershey and Japanese have been moved
	from the help pages (example(plotmath) etc) to demo(plotmath) etc.

    o	plot.dendrogram (`mva' package) now draws leaf labels if present
	by default.

    o	Errors and warnings are sent to stderr not stdout on
	command-line versions of R (Unix and Windows).


NEW FEATURES

    o	qqnorm() and qqline() have an optional logical argument
	`datax' to transpose the plot (S-PLUS compatibility).

    o	library() was changed so that when the methods package is
	attached it no longer complains about formal generic functions
	not specific to the library.

    o	require() has a new argument, character.only,
	  -- to make it align with library.

    o	New function file.symlink() to create symbolic file links
	where supported by the OS.

    o	basename() and dirname() are now vectorized.

    o	mosaicplot() has a new default for `main', and supports the
	`las' argument (contributed by Uwe Ligges and Wolfram Fischer).

    o	optim(method = "SANN") can now cover combinatorial optimization
	by supplying a move function as the `gr' argument (contributed
	by Adrian Trapletti).

    o	New function as.difftime() for time(-interval) data.

    o	PDF files produced by pdf() have more extensive information
	fields, including the version of R that produced them.

    o	Installed packages under Unix without compiled code are no
	longer stamped with the platform and can be copied to other
	Unix-alike platforms (but not to other OSes because of
	potential problems with line endings and OS-specific help files).

    o	New generic function flush() with a method to flush connections.

    o	princomp() no longer allows the use of more variables than
	units: use prcomp() instead.

    o	prcomp() is now fast for n x m inputs with m >> n.

    o	medpolish() {eda} now has an `na.rm' argument (PR#2298).

    o	The internal random number generators will now never return